chore(akari): Pin package versions
Reduce the chances of failure due to unanticipated changes.

--- a/akari/Dockerfile
+++ b/akari/Dockerfile
@@ -2,7 +2,7 @@ FROM golang:1.25.5-alpine@sha256:ac09a5f469f307e5da71e766b0bd59c9c49ea460a528cc3
 
 WORKDIR /build
 
-RUN apk add --no-cache git make
+RUN apk add --no-cache git=2.52.0-r0 make=4.4.1-r3
 
 COPY akari/go.mod akari/go.sum ./
 RUN go mod download
@@ -17,7 +17,7 @@ FROM alpine:3.23@sha256:865b95f46d98cf867a156fe4a135ad3fe50d2056aa3f25ed31662dff
 
 WORKDIR /app
 
-RUN apk add --no-cache ca-certificates tzdata procps
+RUN apk add --no-cache ca-certificates=20251003-r0 tzdata=2025c-r0 procps=4.0.5-r0
 
 COPY --from=builder /build/bin/akari /app/akari
 
