feat(kiseki): Implement character management API with Redis backend

--- a/kiseki/Makefile
+++ b/kiseki/Makefile
@@ -1,6 +1,6 @@
 GO := go
 
-.PHONY: init fmt vet tidy generate lint clean
+.PHONY: init fmt vet tidy generate lint clean up down down-volumes test
 
 init:
 	$(GO) mod download
@@ -25,3 +25,15 @@ lint: fmt vet
 
 clean:
 	rm -f gen
+
+up:
+	docker compose up -d
+
+down:
+	docker compose down
+
+down-volumes:
+	docker compose down -v
+
+test: generate up
+	$(GO) test ./... -v
